Updated for brandonn's release

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <div class="links">
             
             <a class="button primary" href="https://morgann.isaacshea.com/">               
-                <h3>Introducing Brandonn</h3>
-                <p>My brand-new, </p>
+                <h2>Introducing Brandonn</h2>
+                <p>My brand-new Discord bot that changes how you interact with your bots and your server!</p>
             </a>
 
             <a class="button" href="https://isaacshea.com/">
