Fixed some issues with displaying on Instagram

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         
         <div class="links">
             
-            <a class="button primary" href="https://morgann.isaacshea.com/">               
+            <a class="button primary" href="https://brandonn.isaacshea.com/">               
                 <h2>Introducing Brandonn</h2>
                 <p>My brand-new Discord bot that changes how you interact with your bots and your server!</p>
             </a>
