Updated instagram view again

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
         <div class="links">
             
             <a class="button primary" href="https://brandonn.isaacshea.com/">               
-                <h2>Introducing Brandonn</h2>
-                <p>My brand-new Discord bot that changes how you interact with your bots and your server!</p>
+                <h2>Introducing Brandonn - REDEFINE UNDERSTANDING</h2>
             </a>
 
             <a class="button" href="https://isaacshea.com/">
